# probneural-operator-lab

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .security.yml  API_REFERENCE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  BACKLOG.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GENERATION_3_SCALING_SUMMARY.md  GITHUB_WORKFLOW_TEMPLATE.yml  IMPLEMENTATION_COMPLETED.md  IMPLEMENTATION_SUMMARY.md  Makefile  NOVEL_UNCERTAINTY_METHODS_RESEARCH_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  README.md  SECURITY.md  SETUP_REQUIRED.md  TERRAGON_AUTONOMOUS_EXECUTION_FINAL_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION_SUMMARY.md  TERRAGON_AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  TERRAGON_AUTONOMOUS_SDLC_SUMMARY.md  TERRAGON_PROGRESSIVE_QUALITY_GATES_IMPLEMENTATION.md  basic_framework_test.py  check_structure.py  docker-compose.production.yml  docker-compose.yml  final_system_validation.py  final_validation_results.json  generation3_scaling_demo.py  (+19 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: ISSUE_TEMPLATE.md  project-metrics.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  question.yml
.github/workflows/: terragon-quality-gates.yml
.terragon/: config.yaml  quality_gate_report_generation_1.json  quality_gates.json  value-metrics.json
benchmark_results/: benchmark_results.json
benchmarks/: uncertainty_benchmark.py
benchmarks/novel_methods/: __init__.py  novel_benchmark_suite.py  theoretical_validation.py
configs/: deeponet_example.yaml  fno_example.yaml
deployment/: kubernetes_manifests.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  BEST_PRACTICES.md  DEVELOPMENT.md  FINAL_VALIDATION_REPORT.md  PUBLICATION_PACKAGE.md  RESEARCH_CONTRIBUTIONS.md  RESEARCH_PAPER_DRAFT.md  ROADMAP.md  TROUBLESHOOTING.md  monitoring.md  workflows.md
docs/adr/: 0001-linearized-laplace-primary.md  0002-modular-architecture.md  0003-pytorch-backend.md  0004-hierarchical-package-structure.md  README.md  adr-0001-pytorch-backend.md  adr-0002-laplace-approximation.md  adr-0003-modular-architecture.md  adr-template.md
docs/guides/: DEVELOPMENT_GUIDE.md  README.md
docs/workflows/: CI_CD_SETUP.md  DEPENDENCY_MANAGEMENT.md  GITHUB_ACTIONS_SETUP.md  SECURITY_SCANNING_SETUP.md  WORKFLOW_SETUP_GUIDE.md
examples/: basic_training_example.py  comprehensive_test.py  comprehensive_usage_guide.py  hierarchical_uncertainty_demo.py  neural_operator_comparison.py  novel_uncertainty_methods_demo.py  production_server.py  scaling_demo.py
experiments/: novel_methods_benchmark.py  research_validation_suite.py  standalone_validation.py
experiments/research_validation/: detailed_validation_report.md  research_summary.md  validation_results.json
monitoring/: __init__.py  alertmanager.yml  alerts.yml  config.yaml  dashboard.py  grafana-dashboards.json  health_checks.py  logging-config.yml  otel-config.yml  prometheus.yml
probneural_operator/: __init__.py  core.py  robust.py
probneural_operator/active/: __init__.py  acquisition.py  learner.py
probneural_operator/applications/: __init__.py
probneural_operator/benchmarks/: __init__.py  research_benchmarks.py  research_validation.py  theoretical_validation.py
probneural_operator/calibration/: __init__.py  advanced_calibration.py  temperature.py
probneural_operator/data/: __init__.py  datasets.py  generators.py  loaders.py  transforms.py
probneural_operator/deployment/: multi_region.py
probneural_operator/models/: __init__.py
probneural_operator/posteriors/: __init__.py  adaptive_uncertainty.py
probneural_operator/scaling/: __init__.py  autoscale.py  cache.py  distributed.py  distributed_inference.py  distributed_training.py  distributed_training_broken.py  hpc.py  intelligent_autoscaler.py  memory.py  optimizers.py  production_server.py  serving.py
probneural_operator/utils/: __init__.py  advanced_monitoring.py  compliance.py  config.py  diagnostics.py  enhanced_security.py  exceptions.py  health_monitoring.py  internationalization.py  logging.py  logging_config.py  metrics.py  monitoring.py  optimization.py  performance.py  performance_optimizer.py  robust_validation.py  security.py  security_framework.py  validation.py
production/: DEPLOYMENT.md  docker-compose.yml
production/docker/: Dockerfile.prod
production/k8s/: deployment.yaml
production/monitoring/: prometheus.yml
scripts/: build.sh  collect-metrics.py  deploy.sh  docker-cleanup.sh  docker-health.sh  generate-dashboard.py  generate-sbom.sh  release.sh  setup-dev.sh  setup-monitoring.sh  start-monitoring.py  terragon-discovery.py  update-dependencies.sh  validate-sdlc.py
terragon/: __init__.py  integration.py
tests/: conftest.py  conftest.py.backup  run_tests.py  test_examples.py  utils.py
(+65 files in other folders)
